Ajout de tidy: si l'on ajoute $xhtml=true; dans l'appel de squelette (article.php3) et que tidy est install sur le serveur, la page est passee en XHTML valide.

--- a/spip_style.css
+++ b/spip_style.css
@@ -87,6 +87,7 @@ blockquote.spip {
 }
 
 div.spip_poesie {
+	margin-bottom: 5px;
 	margin-left: 10px;
 	padding-left: 10px;
 	border-left: 1px solid #999999;
