--- a/spip_admin.css
+++ b/spip_admin.css
@@ -2,9 +2,9 @@
  * Float ?
  */
 .spip-admin-float {
-	bottom: 0px;
-	left: 0px;
-	position: fixed;
+	top: 0px;
+	right: 0px;
+	position: absolute;
 }
 
 /*
