rétablissement du nom du jour sur le calendrier des scripts index & message; menage dans la bibli principale, pas encore ideal mais minuit approche....

--- a/ecrire/calendrier.css
+++ b/ecrire/calendrier.css
@@ -93,10 +93,7 @@ a.calendrier-annee:hover {
 .calendrier-jour { 
 	color: #999999;
 	background-color: white;
-	border-left: 1px solid #aaaaaa;
-	border-right: 1px solid #aaaaaa;
-	border-bottom: 1px solid #aaaaaa;
-	border-top: 1px solid #aaaaaa;
+	border: 1px solid #aaaaaa;
 }
 
 .calendrier-agenda { 
