introduction de classe dans integre-image, plus qq modifs pour l'accessibilité

--- a/spip_style.css
+++ b/spip_style.css
@@ -36,6 +36,23 @@ h3.spip {
 	font-size : 70%;
 }
 
+.spip_documents_center{
+	margin: auto; 
+	text-align: center;:
+}
+
+.spip_documents_left{
+	float: left;
+	margin: 4px; 
+	text-align: center;:
+}
+
+.spip_documents_right{
+	float: right;
+	margin: 4px; 
+	text-align: center;:
+}
+
 table.spip {
 }
 
