--- a/spip_style.css
+++ b/spip_style.css
@@ -56,6 +56,10 @@ h3.spip {
 table.spip {
 }
 
+table.spip caption{
+	caption-side: top; /* bottom */
+}
+
 table.spip tr.row_first {
 	background-color: #FCF4D0;
 }
