dans les tables : caption et summary

--- a/spip_style.css
+++ b/spip_style.css
@@ -58,6 +58,8 @@ table.spip {
 
 table.spip caption{
 	caption-side: top; /* bottom */
+	text-align:center;
+	background-color: #FCF4D0;
 }
 
 table.spip tr.row_first {
