Corrections d'Aurélien Levy :
summary="" vaut mieux que pas de summary (pour les synthèses vocales)

caption - bottom n'est pas pris en compte par IE, d'où incohérences

centrage du caption sur vieux brouseurs

--- a/spip_style.css
+++ b/spip_style.css
@@ -61,8 +61,10 @@ table.spip {
 }
 
 table.spip caption{
-	caption-side: bottom; /* top */
-	text-align:center;
+	caption-side: top; /* bottom pas pris en compte par IE */
+	text-align: center;
+	margin-left: auto;                                                       
+	margin-right: auto;
 	padding: 3px;
 	font-weight: bold;
 	font-family: Verdana,Arial,Sans,sans-serif;
