Win-png a la racine (pour acces depuis site public)

--- a/spip_style.css
+++ b/spip_style.css
@@ -156,10 +156,7 @@ input.formrecherche {
  *  Images typographiques (via image_typo)
  */
 .image_typo {
-	display: inline;
-}
-.texte_typo {
-	display: none;
+	behavior: url("win_png.htc");
 }
 
 
