--- a/ecrire/calendrier.css
+++ b/ecrire/calendrier.css
@@ -212,3 +212,150 @@ a.calendrier-annee:hover {
 	height: 7px;
 	border: 0px;
 }
+
+.calendrier-nb  { 		/*  style cinemat(yp)ographe */
+	background-color: black;
+	border: 1px solid white;
+	color: white;
+}
+
+.calendrier-couleur1 { 		/* Fushia */
+		background-color: #FDE5F2;
+		border: 1px solid #CD006F;
+		color: #CD006F;
+}
+.calendrier-couleur1i { 		/* Fushia */
+		background-color: #CD006F;
+		border: 1px solid #FDE5F2;
+		color: #FDE5F2
+}
+.calendrier-couleur2 { 		/* Bleu */
+		background-color: #EDF3FE;
+		border: 1px solid #5da7c5;
+		color: #5da7c5;
+}
+.calendrier-couleur2i { 		/* Bleu */
+		background-color: #5da7c5;
+		border: 1px solid #EDF3FE;
+		color: #EDF3FE
+}
+.calendrier-couleur3 { 		/* Bleu pastel */
+		background-color: #EBE9FF;
+		border: 1px solid #766CF6;
+		color: #766CF6;
+}
+.calendrier-couleur3i { 		/* Bleu pastel */
+		background-color: #766CF6;
+		border: 1px solid #EBE9FF;
+		color: #EBE9FF
+}
+.calendrier-couleur4 { 		/* Orange */
+		background-color: #ffeecc;
+		border: 1px solid #fa9a00;
+		color: #fa9a00;
+}
+.calendrier-couleur4i { 		/* Orange */
+		background-color: #fa9a00;
+		border: 1px solid #ffeecc;
+		color: #ffeecc
+}
+.calendrier-couleur5 { 		/* Rouge (Vermillon) */
+		background-color: #FFEDED;
+		border: 1px solid #FF0000;
+		color: #FF0000;
+}
+.calendrier-couleur5i { 		/* Rouge (Vermillon) */
+		background-color: #FF0000;
+		border: 1px solid #FFEDED;
+		color: #FFEDED
+}
+.calendrier-couleur6 { 		/* Orange */
+		background-color: #FFF2EB;
+		border: 1px solid #E95503;
+		color: #E95503;
+}
+.calendrier-couleur6i { 		/* Orange */
+		background-color: #E95503;
+		border: 1px solid #FFF2EB;
+		color: #FFF2EB
+}
+.calendrier-couleur7 { 		/* Jaune */
+		background-color: #ffffee;
+		border: 1px solid #ccaa00;
+		color: #ccaa00;
+}
+.calendrier-couleur7i { 		/* Jaune */
+		background-color: #ccaa00;
+		border: 1px solid #ffffee;
+		color: #ffffee
+}
+.calendrier-couleur8 { 		/* Vert pastel */
+		background-color: #E2FDEC;
+		border: 1px solid #009F3C;
+		color: #009F3C;
+}
+.calendrier-couleur8i { 		/* Vert pastel */
+		background-color: #009F3C;
+		border: 1px solid #E2FDEC;
+		color: #E2FDEC
+}
+.calendrier-couleur9 { 		/* Vert */
+		background-color: #e5fd63;
+		border: 1px solid #9DBA00;
+		color: #9DBA00;
+}
+.calendrier-couleur9i { 		/* Vert */
+		background-color: #9DBA00;
+		border: 1px solid #e5fd63;
+		color: #e5fd63
+}
+.calendrier-couleur10 { 		/* Rouge (Bordeaux) */
+		background-color: #FFE0E0;
+		border: 1px solid #640707;
+		color: #640707;
+}
+.calendrier-couleur10i { 		/* Rouge (Bordeaux) */
+		background-color: #640707;
+		border: 1px solid #FFE0E0;
+		color: #FFE0E0
+}
+.calendrier-couleur11 { 		/* Gris */
+		background-color: #F2F2F2;
+		border: 1px solid #3F3F3F;
+		color: #3F3F3F;
+}
+.calendrier-couleur11i { 		/* Gris */
+		background-color: #3F3F3F;
+		border: 1px solid #F2F2F2;
+		color: #F2F2F2
+}
+.calendrier-couleur12 { 
+		background-color: #aaaaaa;
+		border: 1px solid black;
+		color black;
+
+}
+.calendrier-couleur12i {
+		background-color: black;
+		border: 1px solid #aaaaaa;
+		color: #aaaaaa}
+.calendrier-couleur13 { 		/
+		background-color: #FFFFE0;
+		border: 1px solid #666500;
+		color: #666500; /* Caca d'oie */
+}
+.calendrier-couleur13i { 		/* Caca d'oie */
+		background-color: #666500;
+		border: 1px solid #FFFFE0;
+		color: #FFFFE0
+}
+.calendrier-couleur14 { 		/* Marron */
+		background-color: #F5EEE5;
+		border: 1px solid #8C6635;
+		color: #8C6635;
+}
+.calendrier-couleur14i { 		/* Marron */
+		background-color: #8C6635;
+		border: 1px solid #F5EEE5;
+		color: #F5EEE5
+}
