remplacement d'attributs style par des classes dans spip_style.css pour les deux balises dynamiques qui utlisaient encore les classes de l'espace prive alors que les cookies n'etaient pas necessairement definis

--- a/spip_style.css
+++ b/spip_style.css
@@ -113,6 +113,15 @@ blockquote.spip {
 	border: 1px #666666 solid;
 }
 
+.spip_sanscadre {
+	border: 0px;
+	font-weight: bold;
+}
+
+.spip_serif {
+	font-family: Georgia, Garamond, Times New Roman, serif;
+}
+
 .spip_cadre {
 	width : 95%;
 	background-color: #FFFFFF;
